@@ -295,7 +295,7 @@
 			 *  \returns Boolean \c true if the item to retrieve was located in the given report, \c false otherwise.
 			 */
 			bool USB_GetHIDReportItemInfo(const uint8_t* ReportData,
-			                              HID_ReportItem_t* const ReportItem) ATTR_NON_NULL_PTR_ARG(1) ATTR_NON_NULL_PTR_ARG(2);
+			                              HID_ReportItem_t* const ReportItem) ATTR_NON_NULL_PTR_ARG(1);
 
 			/** Retrieves the given report item's value out of the \c Value member of the report item's
 			 *  \ref HID_ReportItem_t structure and places it into the correct position in the HID report
@@ -311,7 +311,7 @@
 			 *  \param[in]  ReportItem  Pointer to the report item of interest in a \ref HID_ReportInfo_t ReportItem array.
 			 */
 			void USB_SetHIDReportItemInfo(uint8_t* ReportData,
-			                              HID_ReportItem_t* const ReportItem) ATTR_NON_NULL_PTR_ARG(1) ATTR_NON_NULL_PTR_ARG(2);
+			                              HID_ReportItem_t* const ReportItem) ATTR_NON_NULL_PTR_ARG(1);
 
 			/** Retrieves the size of a given HID report in bytes from its Report ID.
 			 *
@@ -330,6 +330,10 @@
 			 *  the parser is used, to determine what report IN, OUT and FEATURE item's information is stored into the user
 			 *  \ref HID_ReportInfo_t structure. This can be used to filter only those items the application will be using, so that
 			 *  no RAM is wasted storing the attributes for report items which will never be referenced by the application.
+			 *
+			 *  Report item pointers passed to this callback function may be cached by the user application for later use
+			 *  when processing report items. This provides faster report processing in the user application than would
+			 *  a search of the entire parsed report item table for each received or sent report.
 			 *
 			 *  \param[in] CurrentItem  Pointer to the current report item for user checking.
 			 *
